# BookStoreApp

./: .flake8  Dockerfile  Makefile  README.md  deploy.py  docker-compose.yml  env.dev  heroku.yml  manage.py  pyproject.toml
.github/workflows/: build.yml  heroku-deploy.yml  pr-checks.yml  pythonanywhere-deploy.yml  workflow-pr.yaml
bookstoreapp/: asgi.py  settings.py  settings_prod.py  settings_test.py  urls.py  views.py  wsgi.py
bookstoreapp/templates/: hello_world.html
order/: factories.py  urls.py
order/migrations/: 0001_initial.py  0002_rename_product_order_products.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py  factories.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
