[tool.poetry]
name = "bookstoreapp"
version = "0.1.0"
description = "Bookstore API"
authors = ["Rafael Correa <rafaelscorreadev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
python-dotenv = "^1.0.0"
pytest = ">=8.3.5,<9.0.0"
factory-boy = ">=3.3.3,<4.0.0"
django = ">=5.2,<6.0"
djangorestframework = ">=3.16.0,<4.0.0"
pytest-django = ">=4.11.1,<5.0.0"
faker = ">=37.1.0,<38.0.0"
django-extensions = ">=4.1,<5.0"
django-debug-toolbar = ">=5.2.0,<6.0.0"
psycopg2-binary = "^2.9.10"
gitpython = "^3.1.44"
mysqlclient = "^2.2.7"
gunicorn = "^23.0.0"
whitenoise = "^6.9.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
